--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -90,6 +90,7 @@ a {
 .project-tagline {
   margin-bottom: 2rem;
   font-weight: normal;
+  text-transform: capitalize;
   opacity: 0.7; }
 
 @media screen and (min-width: 64em) {
@@ -152,6 +153,9 @@ a {
   font-size: 0.9rem;
   line-height: 1.45;
   border-radius: 0.3rem; }
+.main-content .well {
+  font-size: 1.4rem;
+  font-weight: bold; }
 .main-content pre code, .main-content pre tt {
   display: inline;
   max-width: initial;
